# openenv-sql-analyst

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  env.py  models.py
server/database/: schema.py
server/graders/: sql_grader.py
server/tasks/: easy.py  hard.py  medium.py
